<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities_devmode.MainActivity_DevMode"
    tools:layout_editor_absoluteY="25dp">

    <Button
        android:id="@+id/bStartRecord"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/start_recording"
        app:layout_constraintBaseline_toBaselineOf="@+id/bStopRecord"
        app:layout_constraintEnd_toStartOf="@+id/bStopRecord"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bStopRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/stop"
        app:layout_constraintBottom_toBottomOf="@+id/bStartRecord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bStartRecord"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bPlayRecord"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/play_recorded_audio"
        app:layout_constraintEnd_toStartOf="@+id/bStopPlay"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bStartRecord" />

    <Button
        android:id="@+id/bNextToSTFT"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="16dp"
        android:onClick="launchSTFTactivity"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bNextToSTFTtest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="24dp"
        android:onClick="launchSTFTactivityTestMode"
        android:text="@string/next_test_audio"
        app:layout_constraintBottom_toTopOf="@+id/bNextToSTFT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bPCM2WAV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/save_pcm_to_wav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bPlayRecord" />

    <Button
        android:id="@+id/bStopPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/stop"
        app:layout_constraintBaseline_toBaselineOf="@+id/bPlayRecord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bPlayRecord" />

</android.support.constraint.ConstraintLayout>